--- a/icfpc2025.cabal
+++ b/icfpc2025.cabal
@@ -23,6 +23,10 @@ source-repository head
   type: git
   location: https://github.com/TeamSampou/icfpc2025
 
+flag doctests
+  manual: True
+  default: False
+
 library
   exposed-modules:
       Lib
@@ -167,6 +171,10 @@ test-suite icfpc2025-doctest
     , text
     , time
   default-language: GHC2024
+  if flag(doctests)
+    buildable: True
+  else
+    buildable: False
 
 test-suite icfpc2025-test
   type: exitcode-stdio-1.0
