--- a/package.yaml
+++ b/package.yaml
@@ -19,6 +19,11 @@ extra-doc-files:
 # common to point users to the README.md file.
 description:         Please see the README on GitHub at <https://github.com/nobsun/icfpc2025#readme>
 
+flags:
+  doctests:
+    manual: true
+    default: false
+
 dependencies:
 - base >= 4.7 && < 5
 - bytestring
@@ -101,6 +106,12 @@ tests:
     - main-tester
 
   icfpc2025-doctest:
+    when:
+    - condition: flag(doctests)
+      then:
+        buildable: true
+      else:
+        buildable: false
     main:                doctests.hs
     source-dirs:         test
     other-modules:       []
