--- a/hie.yaml
+++ b/hie.yaml
@@ -1,28 +1,25 @@
 cradle:
-  stack:
-    - path: "./src"
-      component: "icfpc2025:lib"
+  cabal:
+    - path: "src"
+      component: "lib:icfpc2025"
 
-    - path: "./app/zzz/add-entry/Main.hs"
+    - path: "app/zzz/add-entry/Main.hs"
       component: "icfpc2025:exe:add-entry"
 
-    - path: "./app/zzz/add-entry/Paths_icfpc2025.hs"
+    - path: "app/zzz/add-entry/Paths_icfpc2025.hs"
       component: "icfpc2025:exe:add-entry"
 
-    - path: "./app/hoge/Main.hs"
-      component: "icfpc2025:exe:hoge"
+    - path: "app/oga/Main.hs"
+      component: "icfpc2025:exe:oga-solve1"
 
-    - path: "./app/hoge/Paths_icfpc2025.hs"
-      component: "icfpc2025:exe:hoge"
-
-    - path: "./app/Main.hs"
+    - path: "app/Main.hs"
       component: "icfpc2025:exe:icfpc2025"
 
-    - path: "./app/Paths_icfpc2025.hs"
+    - path: "app/Paths_icfpc2025.hs"
       component: "icfpc2025:exe:icfpc2025"
 
-    - path: "./test"
+    - path: "test"
       component: "icfpc2025:test:icfpc2025-doctest"
 
-    - path: "./test"
+    - path: "test"
       component: "icfpc2025:test:icfpc2025-test"
