--- a/icfpc2025.cabal
+++ b/icfpc2025.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.18
 
--- This file has been generated from package.yaml by hpack version 0.37.0.
+-- This file has been generated from package.yaml by hpack version 0.38.2.
 --
 -- see: https://github.com/sol/hpack
 
@@ -80,6 +80,7 @@ executable add-entry
       array
     , base >=4.7 && <5
     , bytestring
+    , containers
     , directory
     , exceptions
     , filepath
@@ -108,6 +109,7 @@ executable icfpc2025
       array
     , base >=4.7 && <5
     , bytestring
+    , containers
     , directory
     , exceptions
     , filepath
@@ -136,6 +138,7 @@ executable oga-solve1
       array
     , base >=4.7 && <5
     , bytestring
+    , containers
     , directory
     , exceptions
     , filepath
@@ -163,6 +166,7 @@ test-suite icfpc2025-doctest
       array
     , base >=4.7 && <5
     , bytestring
+    , containers
     , directory
     , doctest
     , exceptions
@@ -198,6 +202,7 @@ test-suite icfpc2025-test
       array
     , base >=4.7 && <5
     , bytestring
+    , containers
     , directory
     , exceptions
     , filepath
