try simple explore

--- a/icfpc2025.cabal
+++ b/icfpc2025.cabal
@@ -33,6 +33,7 @@ library
       Client
       Lib
       ObservationSummary
+      Searching
   other-modules:
       Paths_icfpc2025
   hs-source-dirs:
