--- a/icfpc2025.cabal
+++ b/icfpc2025.cabal
@@ -33,8 +33,9 @@ library
       Client
       FilesIO
       Graph
-      Lib
+      Graph.Z3
       LayoutHexSVG
+      Lib
       ObservationSummary
   other-modules:
       Paths_icfpc2025
