--- a/icfpc2025.cabal
+++ b/icfpc2025.cabal
@@ -33,9 +33,10 @@ library
       Client
       FilesIO
       Graph
-      Lib
       LayoutHexSVG
+      Lib
       ObservationSummary
+      TypesJSON
   other-modules:
       Paths_icfpc2025
   hs-source-dirs:
