--- a/cabal.project
+++ b/cabal.project
@@ -2,4 +2,4 @@ packages: .
 source-repository-package
   type: git
   location: https://github.com/IagoAbal/haskell-z3
-  tag: master
+  tag: b77a17e5eeb7db82656bcbcd66c6e952207e69ca
